kubeless/ui/ui.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
   controller: ui
  namespace: kubeless
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
     controller: ui
  template:
    metadata:
      labels:
        controller: ui
    spec:
      containers:
      - name: ui
        image: bitnami/kubeless-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
      - name: proxy
        image: lachlanevenson/k8s-kubectl:v1.13.1
        imagePullPolicy: Always
        args:
        - proxy
        - "-p"
        - "8080"
      serviceAccountName: ui-acct
---
apiVersion: v1
kind: Service
metadata:
  labels:
    controller: ui
  name: ui
  namespace: kubeless
spec:
  ports:
  - name: ui-port
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    controller: ui
  sessionAffinity: None
  type: NodePort
