kubeless/ui/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeless-ui
  namespace: kubeless
spec:
  rules:
    - host: kubeless-ui.k8s-sample-gke.jchengdev.com  # <TODO> use Kustomize to extract hardcoded DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 3000
